# polars_evm

./: LICENSE-MIT  README.md  pyproject.toml
polars_evm/: __init__.py
polars_evm/_helpers/: __init__.py  encoding_conversions.py  filtering.py  formatting.py  hashes.py  serde.py
polars_evm/_helpers/conversions/: __init__.py  binary_float_conversions.py  binary_hex_conversions.py
polars_evm/_helpers/decoding/: __init__.py  decoding_columns.py  decoding_events.py  decoding_transactions.py  decoding_types.py
polars_evm/_helpers/encoding_conversions/: binary_float_conversions.py  binary_hex_conversions.py
polars_evm/helpers/: __init__.py  hashes.py
polars_evm/namespaces/: __init__.py  df_namespace.py  expr_namespace.py  lazyframe_namespace.py  series_namespace.py
tests/: test_abi_type_decoding.py  test_abi_type_parsing.py  tests_from_eth_abi.py
